--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -74,7 +74,7 @@
           </div>
         </div>
       </a>
-      <% if (loggedIn){ %> <!-- TODO use isauthenticated -->
+      <% if (loggedIn){ %>
       <div class="dropdown-menu  dropdown-menu-right ">
         <div class="dropdown-header noti-title">
           <h6 class="text-overflow m-0">Welcome!</h6>
