1)Model files renamed to schemas, 2)Friends page created, 3)Css added for friends page, 4)Users schema updated to contain the friend request system, 5)Links to friends page added

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,6 +90,18 @@ td a {
   padding-right: 3rem;
 }
 
+/*-------- Friends section start -----------*/
+#friends-table tr td {
+  padding-top: 10px; 
+  padding-bottom:10px
+}
+
+#friends-table tr td.text-center {
+  padding-top: 15px; 
+  padding-bottom: 15px;
+} 
+/*-------- Friends section end -----------*/
+
 /*-------- Navbar section start -----------*/
 .navbar {
   padding-top: 0;
