--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -19,6 +19,8 @@
              class="btn btn-neutral">Create a new game!</a>
           <a href="/log-out"
              class="btn btn-neutral">Log out</a>
+          <a href="/friends"
+             class="btn btn-neutral">Go to friends page</a>
         </div>
       </div>
     </div>
