--- a/views/partials/table.ejs
+++ b/views/partials/table.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid mt--6">
+<div class="container-fluid mt--6">  <!--TODO delete the file after take the sorting method -->
   <div class="row">
     <div class="col">
       <div class="card">
