--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -84,7 +84,7 @@
           <i class="fas fa-user-alt"></i>
           <span>My profile</span>
         </a>
-        <a href="/5fe706f450a0c923cc4248e5/friends"
+        <a href="/friends"
            class="dropdown-item">
           <i class="fas fa-user-friends"></i>
           <span>My friends</span>  <!-- TODO implement friends system -->
