--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -17,12 +17,17 @@
             <h6 class="h1 text-white d-inline-block mb-0">
               Your game statistics!</h6>
           </div>
+          <div class="col-lg-6 col-7">
+            <a href="/profile"
+             class="btn btn-neutral">Go back to profile page</a>
+          </div>
         </div>
         <div class="row">
-          <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+           <!--TODO choose which statistic to be shown -->
+          <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
             <p class="h3 text-white d-inline-block">Choose your game statistics</p>
-          </div>
-          <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12">
+          </div> -->
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <!-- Card stats -->
             <%- include('card_stats'); -%>
           </div>
