--- a/views/partials/test.ejs
+++ b/views/partials/test.ejs
@@ -1,4 +1,4 @@
-<%- include('header'); -%>
+<%- include('header'); -%> <!--TODO delete the file -->
 
 <!-- Main content -->
 <div class="main-content"
