--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,9 +11,8 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-12 col-md-10 col-sm-10">
-        <h1 class="display-2 text-white">Store your memories here!</h1>
-        <p class="home-subtitle">This is a page where you can store your scrabble scores</p>
-        <p class="home-subtitle">Click below to see examples of users profiles</p>     
+        <h1 class="display-2 text-white">Sign in to store your Scrabble games here!</h1>
+        <p class="home-subtitle">Login with username "User" & password "1234" to check all features!</p>
       </div>
     </div>
   </div>
@@ -22,266 +21,175 @@
 <div class="container-fluid "
      style="background-color: #c9c9c9;">
   <div class="row justify-content-center">
-    <!--    <div class="col-lg-7 col-md-7">
-        <div class="card bg-secondary border-0 mb-0 mt--8">
-          <div class="card-header bg-transparent pb-5">
-            <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
-            <div class="btn-wrapper text-center">
-              <a href="#"
-                 class="btn btn-neutral btn-icon">
-                <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
-                <span class="btn-inner--text">Facebook</span>
-              </a>
-              <a href="#"
-                 class="btn btn-neutral btn-icon">
-                <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
-                <span class="btn-inner--text">Google</span>
-              </a>
-            </div>
-          </div>
-          <div class="card-body px-lg-5 py-lg-5">
-            <div class="text-center text-muted mb-4">
-              <small>Or sign in with credentials</small>
-            </div>
-            <form role="form">
-              <div class="form-group mb-3">
-                <div class="input-group input-group-merge input-group-alternative">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><div class="far fa-envelope"></div></span>
-                  </div>
-                  <input class="form-control"
-                         placeholder="Email"
-                         type="email">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="input-group input-group-merge input-group-alternative">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                  </div>
-                  <input class="form-control"
-                         placeholder="Password"
-                         type="password">
-                </div>
-              </div>
-              <div class="custom-control custom-control-alternative custom-checkbox">
-                <input class="custom-control-input"
-                       id=" customCheckLogin"
-                       type="checkbox">
-                <label class="custom-control-label"
-                       for=" customCheckLogin">
-                  <span class="text-muted">Remember me</span>
-                </label>
-              </div>
-              <div class="text-center">
-                <button type="button"
-                        class="btn btn-primary my-4">Sign in</button>
-              </div>
-            </form>
+    <div class="col-xl-6">
+      <!-- Login Here -->
+      <div class="card bg-secondary border-0 mb-0 mt--8">
+        <div class="card-header bg-transparent pb-5">
+          <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
+          <div class="btn-wrapper text-center">
+            <a href="#"
+               class="btn btn-neutral btn-icon">
+              <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
+              <span class="btn-inner--text">Facebook</span>
+            </a>
+            <a href="#"
+               class="btn btn-neutral btn-icon">
+              <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
+              <span class="btn-inner--text">Google</span>
+            </a>
           </div>
         </div>
-        <div class="row mt-3">
-          <div class="col-6">
-            <a href="#"
-               class="text-light"><small>Forgot password?</small></a>
+        <div class="card-body px-lg-5 py-lg-5">
+          <div class="text-center text-muted mb-4">
+            <small>Sign in with credentials</small>
           </div>
-          <div class="col-6 text-right">
-            <a href="#"
-               class="text-light"><small>Create new account</small></a>
-          </div>
+          <form role="form"
+                action="/log-in"
+                method="post">
+            <div class="form-group mb-3">
+              <div class="input-group input-group-merge input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <div class="fas fa-user-alt"></div>
+                  </span>
+                </div>
+                <input class="form-control"
+                       placeholder="Username"
+                       name="username"
+                       type="text">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-merge input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                </div>
+                <input class="form-control"
+                       placeholder="Password"
+                       name="password"
+                       type="password">
+              </div>
+            </div>
+            <!-- <div class="custom-control custom-control-alternative custom-checkbox">
+                     <input class="custom-control-input"
+                            id=" customCheckLogin"
+                            type="checkbox">
+                     <label class="custom-control-label"
+                            for=" customCheckLogin">
+                         <span class="text-muted">Remember me</span>
+                     </label>
+                 </div> -->
+            <div class="text-center">
+              <button type="submit"
+                      class="btn btn-primary my-4">Sign in</button>
+            </div>
+          </form>
         </div>
       </div>
-      <!-- <div class="col-xl-4 order-xl-2">
-        <div class="card card-profile">
-          <img src="../assets/img-1-1000x600.jpg"
-               alt="Image placeholder"
-               class="card-img-top">
-          <div class="row justify-content-center">
-            <div class="col-lg-3 order-lg-2">
-              <div class="card-profile-image">
-                <a href="#">
-                  <img src="../assets/team-4.jpg"
-                       class="rounded-circle">
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
-            <div class="d-flex justify-content-between">
-              <a href="#"
-                 class="btn btn-sm btn-info  mr-4 ">Connect</a>
-              <a href="#"
-                 class="btn btn-sm btn-default float-right">Message</a>
-            </div>
-          </div>
-          <div class="card-body pt-0">
-            <div class="row">
-              <div class="col">
-                <div class="card-profile-stats d-flex justify-content-center">
-                  <div>
-                    <span class="heading">22</span>
-                    <span class="description">Friends</span>
-                  </div>
-                  <div>
-                    <span class="heading">10</span>
-                    <span class="description">Photos</span>
-                  </div>
-                  <div>
-                    <span class="heading">89</span>
-                    <span class="description">Comments</span>
-                  </div>
-                </div>
-              </div>
-            </div>
+      <!-- <div class="row mt-3">
+         <div class="col-6">
+             <a href="#"
+                style="color:white;"><small>Forgot password?</small></a>
+         </div>
+         <div class="col-6 text-right">
+             <a href="#"
+               style="color:white;"><small>Create new account</small></a>
+         </div>
+     </div> -->
+    </div>
+    <div class="col-xl-6">
+      <!-- Register Here -->
+      <div class="card bg-secondary border-0 mt--8">
+        <div class="card-header bg-transparent pb-5">
+            <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
             <div class="text-center">
-              <h5 class="h3">
-                Jessica Jones<span class="font-weight-light">, 27</span>
-              </h5>
-              <div class="h5 font-weight-300">
-                <i class="ni location_pin mr-2"></i>Bucharest, Romania
-              </div>
-              <div class="h5 mt-4">
-                <i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer
-              </div>
-              <div>
-                <i class="ni education_hat mr-2"></i>University of Computer Science
+                <a href="#"
+                   class="btn btn-neutral btn-icon mr-4">
+                    <span class="btn-inner--icon"><img src="../assets/img/icons/common/github.svg"></span>
+                    <span class="btn-inner--text">Github</span>
+                </a>
+                <a href="#"
+                   class="btn btn-neutral btn-icon">
+                    <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
+                    <span class="btn-inner--text">Google</span>
+                </a>
+            </div>
+        </div>
+        <div class="card-body px-lg-5 py-lg-5">
+          <div class="text-center text-muted mb-4">
+            <small>Sign up with credentials</small>
+          </div>
+          <form role="form"
+                action="/register"
+                method="post">
+            <div class="form-group">
+              <div class="input-group input-group-merge input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user-alt"></i></span>
+                </div>
+                <input class="form-control"
+                       placeholder="Name"
+                       name="name"
+                       type="text">
               </div>
             </div>
-          </div>
-        </div>
-      </div> -->
-    <!-- <div class="col-xl-8 order-xl-1">
-        <div class="card">
-          <div class="card-header">
-            <div class="row align-items-center">
-              <div class="col-8">
-                <h3 class="mb-0">Edit profile </h3>
-              </div>
-              <div class="col-4 text-right">
-                <a href="#!"
-                   class="btn btn-sm btn-primary">Settings</a>
+            <div class="form-group">
+              <div class="input-group input-group-merge input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user-circle"></i></span>
+                </div>
+                <input class="form-control"
+                       placeholder="Username"
+                       name="username"
+                       type="text">
               </div>
             </div>
-          </div>
-          <div class="card-body">
-            <form>
-              <h6 class="heading-small text-muted mb-4">User information</h6>
-              <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-username">Username</label>
-                      <input type="text"
-                             id="input-username"
-                             class="form-control"
-                             placeholder="Username"
-                             value="lucky.jesse">
+            <!-- <div class="form-group">
+                    <div class="input-group input-group-merge input-group-alternative mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="far fa-envelope"></i></span>
+                        </div>
+                        <input class="form-control"
+                               placeholder="Email"
+                               name="email"
+                               type="email">
                     </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-email">Email address</label>
-                      <input type="email"
-                             id="input-email"
-                             class="form-control"
-                             placeholder="jesse@example.com">
-                    </div>
-                  </div>
+                </div> -->
+            <div class="form-group">
+              <div class="input-group input-group-merge input-group-alternative">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-key"></i></span>
                 </div>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-first-name">First name</label>
-                      <input type="text"
-                             id="input-first-name"
-                             class="form-control"
-                             placeholder="First name"
-                             value="Lucky">
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-last-name">Last name</label>
-                      <input type="text"
-                             id="input-last-name"
-                             class="form-control"
-                             placeholder="Last name"
-                             value="Jesse">
-                    </div>
-                  </div>
-                </div>
+                <input class="form-control"
+                       placeholder="Password"
+                       name="password"
+                       type="password">
               </div>
-              <hr class="my-4" />
-             
-              <h6 class="heading-small text-muted mb-4">Contact information</h6>
-              <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-address">Address</label>
-                      <input id="input-address"
-                             class="form-control"
-                             placeholder="Home Address"
-                             value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09"
-                             type="text">
+            </div>
+            <!-- <div class="text-muted font-italic"><small>password strength: <span
+                              class="text-success font-weight-700">strong</span></small></div> -->
+            <!-- <div class="row my-4">
+                    <div class="col-12">
+                        <div class="custom-control custom-control-alternative custom-checkbox">
+                            <input class="custom-control-input"
+                                   id="customCheckRegister"
+                                   type="checkbox">
+                            <label class="custom-control-label"
+                                   for="customCheckRegister">
+                                <span class="text-muted">I agree with the <a href="#!">Privacy
+                                        Policy</a></span>
+                            </label>
+                        </div>
                     </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-4">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-city">City</label>
-                      <input type="text"
-                             id="input-city"
-                             class="form-control"
-                             placeholder="City"
-                             value="New York">
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-country">Country</label>
-                      <input type="text"
-                             id="input-country"
-                             class="form-control"
-                             placeholder="Country"
-                             value="United States">
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="form-group">
-                      <label class="form-control-label"
-                             for="input-country">Postal code</label>
-                      <input type="number"
-                             id="input-postal-code"
-                             class="form-control"
-                             placeholder="Postal code">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <hr class="my-4" />
-              
-              <h6 class="heading-small text-muted mb-4">About me</h6>
-              <div class="pl-lg-4">
-                <div class="form-group">
-                  <label class="form-control-label">About Me</label>
-                  <textarea rows="4"
-                            class="form-control"
-                            placeholder="A few words about you ...">A beautiful Dashboard for Bootstrap 4. It is Free and Open Source.</textarea>
-                </div>
-              </div>
-            </form>
-          </div>
+                </div> -->
+            <div class="text-center">
+              <button type="submit"
+                      class="btn btn-primary mt-4">Create account</button>
+            </div>
+          </form>
         </div>
-      </div>  -->
+      </div>
+    </div>
   </div>
 </div>
 
