--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -21,15 +21,38 @@
   <div class="collapse navbar-collapse"
        id="navbarSupportedContent">
     <ul class="navbar-nav">
+      <% if (!loggedIn){ %>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/">Home <span class="sr-only">(current)</span></a>
       </li>
+      <% }else{ %>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/games">My Games <span class="sr-only">(current)</span></a> <!--TODO change profile to games -->
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/friends">My Friends <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/create-new-game">Add a game <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/">Settings <span class="sr-only">(current)</span></a> <!-- TODO Settings page -->
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/log-out">Log Out <span class="sr-only">(current)</span></a> <!-- TODO LogOut functionality -->
+      </li>
+      <% } %>
       <!-- <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/scrabble-statistics">Scrabble Statistics <span class="sr-only">(current)</span></a>
       </li> -->
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/log-in">Log In <span class="sr-only">(current)</span></a>
       </li>
@@ -40,89 +63,36 @@
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
            href="/create-new-game">Create a new game!<span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
     </ul>
   </div>
   <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
-    <li>  <!--TODO mobile view is not correct; bell must appear next to profile icon -->
-      <a class="nav-link pr-0"
+    <li>
+      <!--TODO mobile view is not correct; bell must appear next to profile icon -->
+      <!-- <a class="nav-link pr-0"
          href="#"
          role="button"
          data-toggle="dropdown"
          aria-haspopup="true"
-         aria-expanded="false">
+         aria-expanded="false"> -->
         <div class="media align-items-center">
-          <i class="fas fa-bell"></i> <!-- TODO implement notification system --> 
+          <i class="fas fa-bell"></i> <!-- TODO implement notification system -->
         </div>
-      </a>
+      <!-- </a> -->
     </li>
     <li>
-      <a class="nav-link pr-0"
-         href="#"
-         role="button"
-         data-toggle="dropdown"
-         aria-haspopup="true"
-         aria-expanded="false">
-        <div class="media align-items-center">
-          <i class="fas fa-user-circle fa-2x"></i>
-          <div class="media-body  ml-2  d-none d-lg-block">
-            <% if (loggedIn){ %>
-            <span class="mb-0 text-sm  font-weight-bold"><%= name %></span>
-            <% }else{ %>
-            <span class="mb-0 text-sm  font-weight-bold">Username</span>
-            <% } %>
-          </div>
+      <div class="media align-items-center">
+        <i class="fas fa-user-circle fa-2x"></i>
+        <div class="media-body  ml-2  d-none d-lg-block">
+          <% if (loggedIn){ %>
+          <span class="mb-0 text-sm  font-weight-bold"><%= name %></span>
+          <% }else{ %>
+          <span class="mb-0 text-sm  font-weight-bold">Username</span>
+          <% } %>
         </div>
-      </a>
-      <% if (loggedIn){ %>
-      <div class="dropdown-menu  dropdown-menu-right ">
-        <div class="dropdown-header noti-title">
-          <h6 class="text-overflow m-0">Welcome!</h6>
-        </div>
-        <a href="/profile"
-           class="dropdown-item">
-          <i class="fas fa-user-alt"></i>
-          <span>My profile</span>
-        </a>
-        <a href="/friends"
-           class="dropdown-item">
-          <i class="fas fa-user-friends"></i>
-          <span>My friends</span>  <!-- TODO implement friends system -->
-        </a>
-        <!-- <a href="#!" class="dropdown-item">
-          <i class="ni ni-calendar-grid-58"></i>
-          <span>Activity</span>
-        </a>
-        <a href="#!" class="dropdown-item">
-          <i class="ni ni-support-16"></i>
-          <span>Support</span>
-        </a> -->
-        <div class="dropdown-divider"></div>
-        <a href="/log-out"
-           class="dropdown-item">
-          <i class="fas fa-sign-out-alt"></i>
-          <span>Logout</span>
-        </a>
       </div>
-      <% }else{ %>
-        <div class="dropdown-menu  dropdown-menu-right ">
-          <div class="dropdown-header noti-title">
-            <h6 class="text-overflow m-0">Welcome!</h6>
-          </div>
-          <a href="/log-in"
-             class="dropdown-item">
-             <i class="fas fa-sign-in-alt"></i>
-            <span>Login</span>
-          </a>
-          <a href="/register"
-             class="dropdown-item">
-             <i class="fas fa-share-square"></i>
-            <span>Register</span>
-          </a>
-        </div>
-      <% } %>
     </li>
   </ul>
-  
-  
+
+
 </nav>
