--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -18,8 +18,10 @@
               Your game statistics!</h6>
           </div>
           <div class="col-lg-6 col-7">
-            <a href="/profile"
-             class="btn btn-neutral">Go back to profile page</a>
+            <a href="/games"
+             class="btn btn-neutral">Go back to my games</a>
+             <a href="/error-page" 
+             class="btn btn-neutral">Edit game</a> <!--TODO edit game functionality -->
           </div>
         </div>
         <div class="row">
