--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,8 @@
     <div class="col-xl-6">
       <!-- Login Here -->
       <div class="card bg-secondary border-0 mb-0 mt--8">
-        <div class="card-header bg-transparent pb-5">
+        <!-- TODO implement sign in with facebook -->
+        <!-- <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
           <div class="btn-wrapper text-center">
             <a href="#"
@@ -38,7 +39,7 @@
               <span class="btn-inner--text">Google</span>
             </a>
           </div>
-        </div>
+        </div> -->
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
             <small>Sign in with credentials</small>
@@ -100,21 +101,22 @@
     <div class="col-xl-6">
       <!-- Register Here -->
       <div class="card bg-secondary border-0 mt--8">
-        <div class="card-header bg-transparent pb-5">
-            <div class="text-muted text-center mt-2 mb-4"><small>Sign up with</small></div>
-            <div class="text-center">
-                <a href="#"
-                   class="btn btn-neutral btn-icon mr-4">
-                    <span class="btn-inner--icon"><img src="../assets/img/icons/common/github.svg"></span>
-                    <span class="btn-inner--text">Github</span>
-                </a>
-                <a href="#"
-                   class="btn btn-neutral btn-icon">
-                    <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
-                    <span class="btn-inner--text">Google</span>
-                </a>
-            </div>
-        </div>
+        <!-- TODO implement sign up with facebook -->
+        <!-- <div class="card-header bg-transparent pb-5">
+          <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
+          <div class="btn-wrapper text-center">
+            <a href="#"
+               class="btn btn-neutral btn-icon">
+              <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
+              <span class="btn-inner--text">Facebook</span>
+            </a>
+            <a href="#"
+               class="btn btn-neutral btn-icon">
+              <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
+              <span class="btn-inner--text">Google</span>
+            </a>
+          </div>
+        </div> -->
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
             <small>Sign up with credentials</small>
