--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -29,7 +29,7 @@
       <% }else{ %>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/games">My Games <span class="sr-only">(current)</span></a> <!--TODO change profile to games -->
+           href="/games">My Games <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
@@ -41,11 +41,11 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/">Settings <span class="sr-only">(current)</span></a> <!-- TODO Settings page -->
+           href="/settings">Settings <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/log-out">Log Out <span class="sr-only">(current)</span></a> <!-- TODO LogOut functionality -->
+           href="/log-out">Log Out <span class="sr-only">(current)</span></a> 
       </li>
       <% } %>
       <!-- <li class="nav-item active">
