Navigation bar file renamed

--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -3,8 +3,8 @@
 <!-- Main content -->
 <div class="main-content"
      id="panel">
-    <!-- Topnav -->
-    <%- include('partials/topnav'); -%>
+    <!-- Navigation bar-->
+    <%- include('partials/navigation_bar'); -%>
     <!-- Header -->
     <div class="header bg-primary pb-6">
         <div class="container-fluid">
