--- a/views/games.ejs
+++ b/views/games.ejs
@@ -3,8 +3,8 @@
 <!-- Main content -->
 <div class="main-content"
      id="panel">
-  <!-- Topnav -->
-  <%- include('partials/topnav'); -%>
+  <!-- Navigation bar-->
+  <%- include('partials/navigation_bar'); -%>
   <!-- Header -->
   <div class="header pb-6 d-flex align-items-center"
        style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
