--- a/views/partials/single-game-stats.ejs
+++ b/views/partials/single-game-stats.ejs
@@ -3,8 +3,8 @@
 <!-- Main content -->
 <div class="main-content"
      id="panel">
-  <!-- Topnav -->
-  <%- include('topnav'); -%>
+    <!-- Navigation bar-->
+    <%- include('navigation_bar'); -%>
   <!-- Header -->
   <div class="header bg-primary pb-6"
        style="min-height: 500px; background-image: url(../assets/hannah-rodrigo-mf_3yZnC6ug-unsplash.jpg); background-size: cover; background-position: center top;">
@@ -20,7 +20,7 @@
           <div class="col-lg-6 col-7">
             <a href="/games"
              class="btn btn-neutral">Go back to my games</a>
-             <a href="/error-page" 
+             <a href="/games" 
              class="btn btn-neutral">Edit game</a> <!--TODO edit game functionality -->
           </div>
         </div>
