--- a/views/error_page.ejs
+++ b/views/error_page.ejs
@@ -3,8 +3,8 @@
 <!-- Main content -->
 <div class="main-content"
      id="panel">
-    <!-- Topnav -->
-    <%- include('partials/topnav'); -%>
+    <!-- Navigation bar-->
+    <%- include('partials/navigation_bar'); -%>
     <!-- Header -->
     <div class="header pb-6 d-flex align-items-center error-page-bg-img">
         <!-- Mask -->
