--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/header'); -%>
 
 
-<!-- Topnav -->
-<%- include('partials/topnav'); -%>
+<!-- Navigation bar-->
+<%- include('partials/navigation_bar'); -%>
 <!-- Header -->
 <div class="header pb-6  d-flex align-items-center home-page-bg-img">
   <!-- Mask -->
