--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -3,8 +3,8 @@
 <!-- Main content -->
 <div class="main-content"
      id="panel">
-  <!-- Topnav -->
-  <%- include('partials/topnav'); -%>
+  <!-- Navigation bar-->
+  <%- include('partials/navigation_bar'); -%>
 
   <!-- Header -->
   <!-- Header -->
