Create_new_game page renamed to new_game

--- a/views/games.ejs
+++ b/views/games.ejs
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <h1 class="display-2 text-white">Hello <%= name %></h1>
-          <a href="/create-new-game"
+          <a href="/new-game"
              class="btn btn-neutral">Create a new game!</a>
         </div>
       </div>
