--- a/views/new_game.ejs
+++ b/views/new_game.ejs
@@ -33,7 +33,7 @@
                     </div>
                     <div class="card-body">
                         <form role="form"
-                              action="/create-new-game"
+                              action="/new-game"
                               method="post">
                             <h6 class="heading-small text-muted mb-4">Opponents</h6>
                             <div class="pl-lg-4">
