--- a/views/partials/navigation_bar.ejs
+++ b/views/partials/navigation_bar.ejs
@@ -37,7 +37,7 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/create-new-game">Add a game <span class="sr-only">(current)</span></a>
+           href="/new-game">Add a game <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
@@ -62,7 +62,7 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link font-weight-bold"
-           href="/create-new-game">Create a new game!<span class="sr-only">(current)</span></a>
+           href="/new-game">Create a new game!<span class="sr-only">(current)</span></a>
       </li> -->
     </ul>
   </div>
